<resources>
    <string name="app_name">Moofwd</string>

    <string name="welcome">WELCOME</string>
    <string name="welcomeString">Moofwd’s eXPLORE, eXPERIENCE, and eXTEND gives you the tools to recruit, retain, and engage your future, current and past students. Our custom built app enables you to build community an stay connected.

 </string>

    <string name="getStarted">GET STARTED</string>
    <string name="welcometoMooFwd">WELCOME TO MOOFWD</string>
    <string name="message_click_back_again">Please click BACK again to exit</string>

    <string name="profile">PROFILE</string>
    <string name="contacts">CONTACTS</string>
    <string name="subjects">SUBJECTS</string>
    <string name="subject_detail">SUBJECT DETAIL</string>
    <string name="info">+Info</string>
    <string name="dni">DNI:</string>
    <string name="career">Career:</string>
    <string name="campus">Campus:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="error_message_no_internet">No internet connection!</string>
    <string name="settings">SETTINGS</string>
    <string name="error_no_record">No Record Found!</string>
    <string name="fetching_data">Fetching data....</string>
    <string name="mobile_no_not_available">Mobile no. not available!</string>
    <string name="email_not_available">Email ID not available!</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="time_table">TIMETABLE</string>
    <string name="class_mates">CLASS MATES</string>
    <string name="files">FILES</string>
    <string name="marks">MARKS</string>
    <string name="black_board">BLACKBOARD</string>
    <string name="message">MESSAGE</string>
    <string name="announcements">ANNOUNCEMENTS</string>
</resources>
