<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainRelLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Subjects.SubjectDetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:id="@+id/dataHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/menuHolder"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/contact_background"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/moofwd_timetable"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_table"
                            style="@style/subject_detail_menu"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/moofwd_classmates"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/class_mates"
                            style="@style/subject_detail_menu"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/moofwd_files"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/files"
                            style="@style/subject_detail_menu"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/moofwd_marks"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marks"
                            style="@style/subject_detail_menu"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/moofwd_blackboard"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/black_board"
                            style="@style/subject_detail_menu"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/menuHolder"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/nameHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/subjectNameTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subjects"
                                android:gravity="center"
                                style="@style/subject_detail_subject"/>

                            <TextView
                                android:id="@+id/subjectCodeTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subjects"
                                android:gravity="center"
                                android:layout_marginTop="2dp"
                                style="@style/subject_detail_subject_code"/>

                            <TextView
                                android:id="@+id/periodTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subjects"
                                android:gravity="center"
                                android:layout_marginTop="2dp"
                                style="@style/subject_detail_period"/>

                            <View
                                android:layout_marginTop="20dp"
                                android:layout_width="200dp"
                                android:layout_gravity="center"
                                android:layout_height="1dp"
                                android:background="@color/colorPrimary"/>

                            <TextView
                                android:id="@+id/lectureNameTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subjects"
                                android:gravity="center"
                                android:layout_marginTop="20dp"
                                android:textAllCaps="true"
                                style="@style/subject_detail_lectureName"/>

                            <LinearLayout
                                android:layout_width="220dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:background="@color/contact_background">

                                <TextView
                                    android:id="@+id/emailTV"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    style="@style/subject_detail_email"
                                    android:text="@string/subjects"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginTop="30dp"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <LinearLayout
                                    android:id="@+id/periodHolder"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/moofwd_messages"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:layout_marginTop="5dp"
                                        style="@style/messages"
                                        android:text="@string/message"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/moofwd_announcements"/>

                                    <TextView
                                        android:id="@+id/nameTV"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:layout_marginTop="5dp"
                                        style="@style/messages"
                                        android:text="@string/announcements"/>

                                </LinearLayout>

                            </LinearLayout>

                            <TextView
                                android:id="@+id/subjectOverviewTV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                style="@style/subjectOverview"
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:minLines="1"
                                android:maxLines="8"
                                android:text="@string/subjects"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
